# tmux-plugins-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  tmux.rs  tmux_bindings.rs
